# staticif

./: Cargo.toml
code/: a.txt
src/: check.rs  error.rs  main.rs  parse.rs
