[package]
name = "staticif"
version = "0.1.0"
authors = ["Giles Edkins <edkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
log = "0.4.8"
stderrlog = "0.4.1"
nom = "5.0.0"
num-bigint = "0.2.2"
